Bug 500460 - Weave full status stretches rest of pref window Switch weave prefs to a single column view. Show the status next to the weave button, so it gets cropped if too long. Style the buttons and textboxes to the same size, so they don't stretch other pages.

--- a/chrome/content/fennec.css
+++ b/chrome/content/fennec.css
@@ -54,3 +54,13 @@ richlistitem[type="remotetab"] {
     width: 32px;
     height: 32px;
 }
+
+#weave-detail-prefs-pane button,
+#weave-detail-prefs-pane textbox {
+    width: 16em;
+}
+
+#weave-detail-prefs-pane textbox {
+    font-size: 1em !important;
+    padding: .3em 0;
+}
